# Multicast-device-discovery

./: Cargo.toml  LICENSE
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
