[package]
name = "multicast"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["client", "server", "shared"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
server = { path = "./server" }
client = { path = "./client" }
